Refactor getting entities methods for services